@startuml

title __NAVIGATION's Class Diagram__\n

  package Twitter {
    package Twitter.Navigation {
      class GoToNextScene {
          + GoToNextScene()
          + goToScene()
      }
    }
  }
  

  package Twitter {
    package Twitter.Navigation {
      class GoToRootScene {
          + GoToRootScene()
          + goToScene()
      }
    }
  }
  

  package Twitter {
    package Twitter.Navigation {
      interface NavigationStrategy {
          {abstract} + goToScene()
      }
    }
  }
  

  package Twitter {
    package Twitter.Navigation {
      enum WINDOWS {
        LOGIN
        HOME
        MAIN
        FEED
      }
    }
  }
  

  GoToNextScene -up-|> NavigationStrategy
  GoToNextScene o-- WindowsNavigator : windowsNavigator
  GoToNextScene o-- MainWindow : mainWindow
  GoToRootScene -up-|> NavigationStrategy
  GoToRootScene o-- MainWindow : mainWindow
  GoToRootScene o-- WindowsNavigator : windowsNavigator
  NavigationStrategy +-down- WINDOWS


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
